# opensearch-rs

./: .gitignore  ADMINS.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  MAINTAINERS.md  Makefile.toml  README.md  RELEASING.md  USER_GUIDE.md
.ci/: DockerFile.Repository  DockerFile.opendistro  generate-certs.sh  run-elasticsearch.sh  run-opensearch.sh  run-repository.sh  run-tests  test-matrix.yml  update-version.sh
.ci/certs/: ca.pem  esnode-no-san.crt  esnode.crt  esnode.key  generate-certs.sh  generate-keys.sh  kirk.crt  kirk.key  kirk.p12  openssl.conf  root-ca.crt  root-ca.key  testnode.crt  testnode_no_san.crt
.ci/functions/: cleanup.sh  imports.sh  wait-for-container.sh
.ci/opendistro/: Dockerfile  docker-compose.yml
.ci/opensearch/: Dockerfile  docker-compose.yml  esnode-key.pem  opensearch.yml
.ci/release/: config.yml
.github/: CODEOWNERS  dependabot.yml  license-header.txt
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE.md
.github/actions/run-released-opensearch/: action.yml
.github/actions/setup-rust-tools/: action.yml
.github/actions/start-opensearch/: action.yml
.github/workflows/: backport.yml  bump-version.yml  changelog_verifier.yml  clippy_check.yml  delete_backport_branch.yml  dependabot_pr.yml  links.yml  release-drafter.yml  test-integration-opendistro.yml  test-integrations-elasticsearch-oss.yml  test-integrations-unreleased.yml  test-integrations.yml  test.yml  version.yml
api_generator/: Cargo.toml
api_generator/docs/functions/: Indices.create.md  Indices.put_mapping.md  Opensearch.scroll.md
api_generator/docs/namespaces/: cat.md  cluster.md  dangling_indices.md  features.md  graph.md  indices.md  ingest.md  logstash.md  monitoring.md  nodes.md  searchable_snapshots.md  snapshot.md  tasks.md  text_structure.md
api_generator/rest_specs/: _common.json  bulk.json  cat.aliases.json  cat.allocation.json  cat.cluster_manager.json  cat.count.json  cat.fielddata.json  cat.health.json  cat.help.json  cat.indices.json  cat.master.json  cat.nodeattrs.json  cat.nodes.json  cat.pending_tasks.json  cat.plugins.json  cat.recovery.json  cat.repositories.json  cat.segments.json  cat.shards.json  cat.snapshots.json  cat.tasks.json  cat.templates.json  cat.thread_pool.json  cat.transforms.json  clear_scroll.json  close_point_in_time.json  cluster.allocation_explain.json  cluster.delete_component_template.json  cluster.delete_voting_config_exclusions.json  cluster.exists_component_template.json  cluster.get_component_template.json  cluster.get_settings.json  cluster.health.json  cluster.pending_tasks.json  cluster.post_voting_config_exclusions.json  cluster.put_component_template.json  cluster.put_settings.json  cluster.remote_info.json  cluster.reroute.json  cluster.state.json  (+125 more)
api_generator/src/: lib.rs
api_generator/src/generator/: mod.rs  output.rs
api_generator/src/generator/code_gen/: mod.rs  namespace_clients.rs  params.rs  root.rs
api_generator/src/generator/code_gen/request/: request_builder.rs
api_generator/src/generator/code_gen/url/: enum_builder.rs  url_builder.rs
api_generator/src/rest_spec/: mod.rs
docs/: index.asciidoc  installation.asciidoc  overview.asciidoc
elasticsearch/examples/: cat_indices.rs
elasticsearch/examples/index_questions_answers/: main.rs
elasticsearch/examples/search_questions/: main.rs
elasticsearch/examples/search_questions_answers/: main.rs
elasticsearch/src/: .generated.toml  auth.rs  cat.rs  cert.rs  client.rs  cluster.rs  dangling_indices.rs  indices.rs  ingest.rs  lib.rs  migration.rs  nodes.rs  params.rs  snapshot.rs  tasks.rs  text_structure.rs
elasticsearch/src/http/: mod.rs  request.rs  response.rs  transport.rs
elasticsearch/src/root/: bulk.rs  mod.rs
elasticsearch/tests/: auth.rs  client.rs  error.rs
elasticsearch/tests/common/: client.rs  mod.rs
guides/: advanced_index_actions.md  bulk.md  document_lifecycle.md  index_lifecycle.md  index_template.md  search.md
jenkins/: release.JenkinsFile
opensearch/: Cargo.toml  build.rs
opensearch/examples/: advanced_index_actions.rs  aws_auth.rs  cat_indices.rs  index_lifecycle.rs  index_template.rs  json.rs
opensearch/examples/index_questions_answers/: main.rs  stack_overflow.rs
opensearch/examples/search_questions/: main.rs
opensearch/examples/search_questions_answers/: main.rs  stack_overflow.rs
opensearch/src/: .generated.toml  auth.rs  cat.rs  cert.rs  client.rs  cluster.rs  dangling_indices.rs  error.rs  indices.rs  ingest.rs  lib.rs  nodes.rs  params.rs  snapshot.rs  tasks.rs  text_structure.rs
opensearch/src/auth/: cache.rs  mod.rs
opensearch/src/aws/: mod.rs  sigv4.rs
opensearch/src/aws4_sign/: mod.rs
opensearch/src/http/: aws_auth.rs  headers.rs  mod.rs  request.rs  response.rs  transport.rs
opensearch/src/http/middleware/: initializers.rs  mod.rs  request_handler.rs  request_pipeline.rs
opensearch/src/http/middleware/initializers/: client.rs  mod.rs  request.rs
opensearch/src/models/: mod.rs
opensearch/src/root/: bulk.rs  mod.rs
opensearch/tests/: auth.rs  aws_auth.rs  cert.rs  client.rs  error.rs  middleware.rs
opensearch/tests/common/: client.rs  mod.rs  server.rs
yaml_test_runner/: Cargo.toml  skip.yml  skip_with_security.yml
yaml_test_runner/src/: generator.rs  github.rs  main.rs  regex.rs  rusty_json.rs  skip.rs
yaml_test_runner/src/step/: comparison.rs  contains.rs  do.rs  is_false.rs  is_true.rs  length.rs  match.rs  mod.rs  set.rs  skip.rs  transform_and_set.rs
yaml_test_runner/tests/common/: client.rs  kirk.p12  macros.rs  mod.rs  transform.rs
