[package]
name = "api_generator"
version = "2.0.0"
publish = false
description = "Generates source code for opensearch package, from the OpenSearch REST API specs"
repository = "https://github.com/opensearch-project/opensearch-rs"
authors = ["Elastic and Contributors", "OpenSearch Contributors"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
array_tool = "1.0.3"
dialoguer = "0.3.0"
failure = "0.1.5"
flate2 = "~1"
globset = "~0.4"
Inflector = "0.11.4"
indicatif = "0.12.0"
itertools = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.8"
path-slash = "0.2.1"
quote = "~0.3"
reduce = "0.1.2"
regex = "1.3.1"
reqwest = "~0.9"
semver = "0.9.0"
serde = "~1"
serde_json = "~1"
serde_derive = "~1"
simple_logger = "2.3.0"
syn = { version = "~0.11", features = ["full"] }
tar = "~0.4"
toml = "0.5.6"
url = "2.1.1"
void = "1.0.2"
html-escape = "0.2.11"

[dev-dependencies]
tempfile = "3.1.0"
