[package]
name = "api_generator"
version = "3.0.0"
publish = false
description = "Generates source code for opensearch package, from the OpenSearch REST API specs"
repository = "https://github.com/opensearch-project/opensearch-rs"
authors = ["Elastic and Contributors", "OpenSearch Contributors"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
array_tool = "1.0.3"
dialoguer = "0.11.0"
flate2 = "1"
globset = "0.4"
Inflector = "0.11.4"
itertools = "0.14.0"
lazy_static = "1.4.0"
log = "0.4.8"
path-slash = "0.2.1"
proc-macro2 = "1.0"
quote = "1.0"
reduce = "0.1.2"
regex = "1.3.1"
reqwest = { version = "0.12", features = ["blocking"] }
semver = "1.0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "~1"
simple_logger = "5.0.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
tar = "0.4"
toml = "0.8.0"
url = "2.1.1"
void = "1.0.2"
html-escape = "0.2.11"

[dev-dependencies]
pretty_assertions = "1.3"
tempfile = "3.1.0"
