[package]
name = "opensearch"
version = "2.0.0"
edition = "2018"
authors = ["Elastic and Contributors", "OpenSearch Contributors"]
description = "Official OpenSearch Rust client"
repository = "https://github.com/opensearch-project/opensearch-rs"
keywords = ["opensearch", "elasticsearch", "search", "lucene"]
categories = ["api-bindings", "database"]
documentation = "https://opensearch.org/docs/latest"
license = "Apache-2.0"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["native-tls"]

# beta and experimental APIs
beta-apis = []
experimental-apis = ["beta-apis"]

# optional TLS
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

# AWS SigV4 Auth support
aws-auth = ["aws-sigv4", "aws-types"]

[dependencies]
base64 = "^0.20"
bytes = "^1.0"
dyn-clone = "~1"
lazy_static = "1.4"
percent-encoding = "2.1.0"
reqwest = { version = "~0.11", default-features = false, features = ["gzip", "json"] }
url = "^2.1"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
serde_with = "~1"
void = "1.0.2"
aws-sigv4 = { version = ">= 0.10", optional = true }
aws-types = { version = ">= 0.10", optional = true }

[dev-dependencies]
aws-config = ">= 0.10"
chrono = { version = "^0.4", features = ["serde"] }
clap = "~2"
failure = "0.1.5"
futures = "0.3.1"
http = "0.2"
hyper = { version = "0.14", default-features = false, features = ["tcp", "stream", "server"] }
os_type = "2.2"
regex="1.4"
sysinfo = "0.26.4"
textwrap = "^0.15"
tokio = { version = "1.0", default-features = false, features = ["macros", "net", "time", "rt-multi-thread"] }
xml-rs = "^0.8"

[build-dependencies]
rustc_version = "0.4"
