[package]
name = "opensearch"
version = "3.0.0"
edition = "2018"
authors = ["Elastic and Contributors", "OpenSearch Contributors"]
description = "Official OpenSearch Rust client"
repository = "https://github.com/opensearch-project/opensearch-rs"
keywords = ["opensearch", "elasticsearch", "search", "lucene"]
categories = ["api-bindings", "database"]
documentation = "https://opensearch.org/docs/latest"
license = "Apache-2.0"
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["native-tls"]

# beta and experimental APIs
beta-apis = []
experimental-apis = ["beta-apis"]

# optional TLS
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

# AWS SigV4 Auth support
aws-auth = ["aws-credential-types", "aws-sigv4", "aws-smithy-runtime-api", "aws-types"]

[dependencies]
base64 = "0.21"
bytes = "1.0"
dyn-clone = "1"
lazy_static = "1.4"
percent-encoding = "2.1.0"
reqwest = { version = "0.11", default-features = false, features = ["gzip", "json"] }
url = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
thiserror = "1"
void = "1.0.2"
aws-credential-types = { version = "1", optional = true }
aws-sigv4 = { version = "1", optional = true }
aws-smithy-runtime-api = { version = "1", optional = true, features = ["client"]}
aws-types = { version = "1", optional = true }

[dev-dependencies]
anyhow = "1.0"
aws-config = "1"
aws-smithy-async = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
futures = "0.3.1"
http-body-util = "0.1.0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
sysinfo = "0.30.3"
test-case = "3"
textwrap = "0.16"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
xml-rs = "0.8"

[build-dependencies]
rustc_version = "0.4"
